<resources>
    <string name="app_name">LoginSignUp MVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="hello_mvvm_kotlin">Hello MVVM Kotlin</string>
</resources>