<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background"
            android:paddingBottom="@dimen/padding_80">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16"
                android:src="@drawable/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_80"
                android:layout_marginEnd="@dimen/margin_50"
                android:src="@drawable/ic_app_logo_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_26"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_26"
                android:background="@drawable/login_signup_background"
                android:paddingBottom="@dimen/padding_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/sign_up"
                    android:textColor="@color/base_blue"
                    android:textSize="@dimen/text_30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvFirstNameTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:hint="@string/first_name"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvLastNameTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:hint="@string/last_name"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvFirstNameTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvMobileTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:hint="@string/mobile"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLastNameTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvEmailTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMobileTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPasswordTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvConfirmPwdTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_14"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:hint="@string/confirmPwd"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfirmPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_24"
                    android:layout_weight=".5"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="@dimen/padding_36"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_36"
                    android:paddingBottom="@dimen/padding_10"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/text_18"
                    app:backgroundTint="@color/base_color"
                    app:cornerRadius="30dp"
                    app:elevation="2dp"
                    app:layout_constraintTop_toBottomOf="@id/tvConfirmPwdTitle" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSignUp">

                    <TextView
                        android:id="@+id/tvAlreadyAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Already an user ?"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintStart_toEndOf="@id/tvAlreadyAcc"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
